<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:android="http://schemas.android.com/apk/res/android">
    
    
	<string name="addWMP">Add To Meal Plan</string>
    <string name="app_name">WeeklyMealPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="addIngridients">Add Ingridients To Shopping List</string>
    <string name="RefreshRecipes">Refresh Recipe List</string>
    <string name="recipe_logo">Recipe Logo</string>
    <string name="searchRecipe">Search Recipe</string>
    <string name="retrievingRecipe">Retrieving List of Recipes From Google App Engine</string>
    <string name="addMealPlanner">Add Recipe To Meal Planner</string>
    <string name="app_label">Search Box</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_log_in">Weekly Meal Planner</string>
    <string name="enter_pswd">Password</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="menu_meal_planner">Weekly Meal Planner</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_recipe_information">RecipeInformation</string>
    <string name="recipe_ingridients">Recipe Ingridients</string>
    <string name="recipe_method">Method</string>
    <string name="current_weight">Current Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="weekly_budget">Weekly Budget</string>
    <string name="veg_yes">Yes</string>
    <string name="veg_no">No</string>
    <string name="mainGoal_1">Lose Weight</string>
    <string name="mainGoal_2">Gain Weight</string>
    <string name="mainGoal_3">Save Money</string>
    <string name="user_email">Email</string>
    <string name="user_name">User Name</string>
    <string name="userConf_email">Confirm Email</string>
    <string name="user_password">Password</string>
    <string name="ctn_button">Continue To Dietary Inforamtion</string>
    <string name="radio_vegan">Vegetarian</string>
    <string name="radio_mainGoal">Main Goal</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="title_activity_dietary_info">DietaryInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_registration">UserRegistration</string>
    <string name="Create_MealPlan_Button">Create Meal Plan</string>
    <string name="Update_MealPlan_Button">Update Meal Plan</string>
    <string name="Title_Sunday">Sunday</string>
    <string name="Title_Monday">Monday</string>
    <string name="Title_Tuesday">Tuesday</string>
    <string name="Title_Wednesday">Wednesday</string>
    <string name="Title_Thursday">Thursday</string>
    <string name="Title_Friday">Friday</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Title_Saturday">Saturday</string>
    <string name="remove_recipe">Remove</string>
    <string name="add_recipe">Add</string>
    <string name="display_recipe">View Recipe</string>
    <string name="title_activity_wmp">WMP</string>
    <string name="download_recipe_imgBtn">Download Recipe</string>
    <string name="title_activity_display_recipe">Display Recipe</string>

</resources>