<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weeklymealplanner.WMP"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/DayBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/MealTimeBar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title_Sunday" />

        <TextView
            android:id="@+id/Monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title_Monday" />

        <TextView
            android:id="@+id/Tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title_Tuesday" />

        <TextView
            android:id="@+id/Wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title_Wednesday" />

        <TextView
            android:id="@+id/Thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title_Thursday" />

        <TextView
            android:id="@+id/Friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title_Friday" />

        <TextView
            android:id="@+id/Saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title_Saturday" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MealTimeBar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/DayBar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Breakfast" />

        <TextView
            android:id="@+id/Lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Lunch" />

        <TextView
            android:id="@+id/Dinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Dinner" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/MealTimeBar"
        android:layout_alignTop="@+id/DayBar" >
    </ListView>

</RelativeLayout>