<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B65EC"
    android:orientation="vertical"
    tools:context="com.weeklymealplanner.RecipeInformation"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/ingridients_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_ingridients"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/recipe_ingridients_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="" />

    <TextView
        android:id="@+id/method_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_method"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/method_editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="" >
    </EditText>

    <Button
        android:onClick="sendRecipe"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addWMP" />

</LinearLayout>