<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/SearchRecipe"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:onClick="SearchRecipe"
            android:text="@string/searchRecipe"
            android:textSize="12sp" />
        <Button
            android:id="@+id/RefreshRecipe"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:onClick="RefreshButton"
            android:text="@string/RefreshRecipes"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.45"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/RecipeListLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3sp"
            android:text="@string/retrievingRecipe" />

        <ListView
            android:id="@+id/RecipeList"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>